<resources>
    <string name="app_name">rydeOn</string>
    <string name="FACEBOOK_APP_ID">153106458887162</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">9213866e7eb63d23c0700b0598f9c682</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="phone">0240000000</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="prompt_password">Password</string>
    <string name="retypePassword">Confirm Password</string>
    <string name="register">Register</string>
    <string name="field_required">Field  Required</string>
    <string name="format_invalid">Invalid Format</string>
    <string name="too_short_password">Password too short</string>
    <string name="unmatch_password">Unmatched Password</string>
    <string name="verify">Verify</string>
    <string name="forget_password">Forgotten password?</string>
    <string name="check_phone_number">Check phone number</string>
    <string name="please_wait">Please wait...</string>
    <string name="resend_code">resend code</string>
    <string name="change_phone_number">Change phone number</string>
    <string name="permission_denied">Permission denied</string>
    <string name="Cancel">Cancel</string>
    <string name="open_location_settings">Open Location Settings</string>
    <string name="gps_network_not_enabled">Location is not enabled. To get your current location, please turn on your Location Service</string>
    <string name="grant_location_access">For best user experience, grant rydeOn to an access to your current location</string>
    <string name="grant_access">Grant Access</string>
    <string name="pending_rides">Pending</string>
    <string name="sucessful">Successful</string>
    <string name="my_rides">My Rides</string>
    <string name="gmap_key">AIzaSyBiRybDXZt6tmJba_joQEdI7UluaAyfP5c</string>

    <string name="RegistrationNo">Registration #</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="add_car">Add Car</string>
    <string name="create_journey">create journey</string>
    <string name="logout">Logout</string>
    <string name="join_ride">Join Ride</string>
    <string name="amount">Fare</string>
    <string name="confirm_location">confirm location</string>
    <string name="rides_in_map">Rides in Maps</string>
    <string name="maxRiders">Free seats</string>
    <string name="choose_image">Choose Image</string>


</resources>
