<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary">

    <ScrollView
        android:id="@+id/layout_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/first_name"
                android:textColor="@color/white"
                android:textColorHint="@color/white">

                <EditText
                    android:id="@+id/edtFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/last_name"
                android:textColor="@color/white"
                android:textColorHint="@color/white">

                <EditText
                    android:id="@+id/edtLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/spinnerGender"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:spinnerMode="dialog">

            </Spinner>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/phone"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                >

                <EditText
                    android:id="@+id/edtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/prompt_password"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:passwordToggleEnabled="true"
                >

                <EditText
                    android:id="@+id/edt_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_edtRetypePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/retypePassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/edtRetypePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <com.dx.dxloadingbutton.lib.LoadingButton
                android:id="@+id/btn_register"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:lb_resetAfterFailed="true"
                app:lb_btnRippleColor="@color/black"
                app:lb_btnDisabledColor="@color/light_gray"
                app:lb_disabledTextColor="@color/gray"
                app:lb_btnText="@string/register"
                app:lb_btnColor="@color/colorAccent"
                />


            <TextView
                android:id="@+id/btn_goto_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:text="Already registered? Login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>
