<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"

            >


            <!--<Spinner-->
                <!--android:id="@+id/spinnerSource"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="50dp"-->
                <!--android:spinnerMode="dialog"></Spinner>-->
            <fragment
                android:id="@+id/place_autocomplete_fragmentFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_centerInParent="true"
                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                />

            <!--<ImageButton-->
                <!--android:id="@+id/trackLocation"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:background="@mipmap/ic_location"-->
                <!--android:layout_alignParentEnd="true"-->
                <!--android:layout_alignParentRight="true"/>-->



        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            >

            <!--<Spinner-->
                <!--android:id="@+id/spinnerDestination"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="50dp"-->

                <!--android:spinnerMode="dialog"></Spinner>-->
            <fragment
                android:id="@+id/place_autocomplete_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                />


        </LinearLayout>





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            >


            <!--<Spinner-->
                <!--android:id="@+id/spinnerMaxRiders"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="50dp"-->
                <!--android:spinnerMode="dialog"-->
                <!--android:layout_marginBottom="10dp"></Spinner>-->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/maxRiders">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtMaxRiders"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:text=""/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btndatePicker"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Pick Date"
                android:layout_marginBottom="10dp"
                />

            <Button
                android:id="@+id/btntimePicker"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="set journey time"
                android:layout_marginBottom="10dp"
                />


        </LinearLayout>


        <Button
            android:id="@+id/btn_add_journey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/colorAccent"
            android:text="@string/create_journey"
            android:textColor="@color/white" />

    </LinearLayout>

</ScrollView>