<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/btnSelectMake"
                android:layout_weight="2.5"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="select make"/>
            
            <ProgressBar
                android:id="@+id/progressBarMake"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:visibility="gone"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/btnSelectModel"
                android:layout_weight="2.5"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="select model"/>

            <ProgressBar
                android:id="@+id/progressBarModel"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:visibility="gone"/>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_car_regNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/RegistrationNo"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_car_regNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>

        <!--<android.support.design.widget.TextInputLayout-->
            <!--android:id="@+id/layout_car_Model"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="@string/model"-->
            <!--android:layout_marginTop="5dp">-->


            <!--<android.support.design.widget.TextInputEditText-->
                <!--android:id="@+id/edt_car_Model"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:inputType="text"-->
                <!--android:maxLines="1"/>-->

        <!--</android.support.design.widget.TextInputLayout>-->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_car_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/year"
            android:layout_marginTop="5dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_car_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            >


            <ImageButton
                android:id="@+id/btnTakePic"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/ic_add_photo"
                android:scaleType="fitXY"
                android:background="@color/white"
                android:gravity="center_horizontal"
                android:layout_gravity="center"/>

            <ImageView
                android:id="@+id/pic_frame"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="fitXY"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>


        <Button
            android:id="@+id/btn_add_car"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/add_car"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:visibility="gone"/>

        <com.dx.dxloadingbutton.lib.LoadingButton
            android:id="@+id/btnAddCar"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:lb_resetAfterFailed="true"
            app:lb_btnRippleColor="@color/black"
            app:lb_btnDisabledColor="@color/light_gray"
            app:lb_disabledTextColor="@color/gray"
            app:lb_btnText="@string/add_car"
            app:lb_btnColor="@color/colorPrimary"
            />

    </LinearLayout>




</ScrollView>